[package]
name = "REST-api-hyper"
version = "0.1.0"
edition = "2021"

# https://www.becomebetterprogrammer.com/rust-api-using-hyper/#Test_the_API

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } 
chrono = "0.4"